2008-04-21  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/dsplib.h:
	  No fastcall attribute on 64bit.

2008-04-20  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* src/bmltest_info.c:
	* src/bmltest_process.c:
	  Disable nachine emu for 64bit.

2008-04-19  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* dllwrapper1/wine/Makefile.am:
	* src/Makefile.am:
	  Only use ARCH flags for bml part.

2008-04-19  Stefan Kost  <ensonic@users.sf.net>

	* README:
	  More notes to the 64bit issues.
	
	* configure.ac:
	* dllwrapper1/wine/Makefile.am:
	  Revert last change and fix asflags.
	
	* dllwrapper1/wine/ldt_keeper.c:
	  Fix one cast warning.

2008-04-19  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* dllwrapper1/wine/Makefile.am:
	* dllwrapper1/wine/stubs64.s:
	  Made 64bit variant. Disable -m32 and try to build 64bit version on
	  64bit platforms.

2008-04-19  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/Makefile.am:
	  Change LDFLAGS to LIBADD and add -lstdc++.

2008-04-16  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* README:
	* TODO:
	* autogen.sh:
	* configure.ac:
	* dllwrapper1/wine/ldt_keeper.c:
	* dllwrapper2/lib.h:
	* src/BuzzMachineLoader/BuzzMDKHelper.cpp:
	* src/BuzzMachineLoader/BuzzMDKHelper.h:
	* src/BuzzMachineLoader/BuzzMachine.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/BuzzMachineLoader/BuzzMachineVirtualCallbacks.cpp:
	* src/BuzzMachineLoader/Makefile.am:
	* src/BuzzMachineLoader/OscTable.cpp:
	* src/BuzzMachineLoader/OscTable.h:
	* src/BuzzMachineLoader/debug.cpp:
	* src/BuzzMachineLoader/debug.h:
	* src/Makefile.am:
	* src/bml.c:
	* src/bml.h:
	* src/bmltest_info.c:
	* src/bmltest_process.c:
	* tests/bt-cfg.sh.in: